fix flax-gap value in m-option-base

--- a/UI/src/css/molecules/m-option.css
+++ b/UI/src/css/molecules/m-option.css
@@ -6,7 +6,7 @@ m-option-base {
     label {
         align-items: center;
         display: inline-flex;
-        gap: 0.2em;
+        gap: calc(var(--space-1) * 1.5);
         padding-block: calc(var(--space-1) / 2);
     }
 
